--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
+    "chat_app": "file:..",
     "lucide-react": "^0.474.0",
     "postcss": "^8.5.1",
     "react": "^18.3.1",
